--- a/.env.base
+++ b/.env.base
@@ -44,6 +44,7 @@ REACT_APP_FEATURE_PORTALS_SWAPPER=true
 REACT_APP_FEATURE_RUNEPOOL=true
 REACT_APP_FEATURE_MARKETS=false
 REACT_APP_FEATURE_PHANTOM_WALLET=false
+REACT_APP_FEATURE_ZRX_PERMIT2=false
 
 # absolute URL prefix
 REACT_APP_ABSOLUTE_URL_PREFIX=https://app.shapeshift.com
